--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
