--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
     "test": "mocha ./test/**",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc npm run test",
+    "dev": " SET NODE_ENV=development&  node ./bin/www",
+    "start": "SET NODE_ENV=production& node ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^3.2.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
